// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - Pagination Test Test Pagination 3 pages - page 1 active (first) 1`] = `
<div
  className="sc-AxjAm pxkaG"
>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "#dddddd",
        "cursor": "not-allowed",
      }
    }
  >
    &lt; Previous page
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "5px solid black",
      }
    }
  >
    1
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    2
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    3
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
      }
    }
  >
    Next page &gt;
  </span>
</div>
`;

exports[`Component - Pagination Test Test Pagination 3 pages - page 2 active (second index) 1`] = `
<div
  className="sc-AxjAm pxkaG"
>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
      }
    }
  >
    &lt; Previous page
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    1
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "5px solid black",
      }
    }
  >
    2
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    3
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
      }
    }
  >
    Next page &gt;
  </span>
</div>
`;

exports[`Component - Pagination Test Test Pagination 3 pages - page 3 active (last) 1`] = `
<div
  className="sc-AxjAm pxkaG"
>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
      }
    }
  >
    &lt; Previous page
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    1
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    2
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "5px solid black",
      }
    }
  >
    3
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "#dddddd",
        "cursor": "not-allowed",
      }
    }
  >
    Next page &gt;
  </span>
</div>
`;

exports[`Component - Pagination Test Test Pagination 4 pages - page 3 active (second index) 1`] = `
<div
  className="sc-AxjAm pxkaG"
>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
      }
    }
  >
    &lt; Previous page
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    2
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "5px solid black",
      }
    }
  >
    3
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={Object {}}
  >
    4
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
      }
    }
  >
    Next page &gt;
  </span>
</div>
`;

exports[`Component - Pagination Test renders Pagination without crashing 1`] = `
<div
  className="sc-AxjAm pxkaG"
>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "#dddddd",
        "cursor": "not-allowed",
      }
    }
  >
    &lt; Previous page
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "white",
        "borderBottom": "5px solid black",
      }
    }
  >
    1
  </span>
  <span
    className="sc-AxirZ fiXIyU"
    onClick={[Function]}
    style={
      Object {
        "color": "black",
      }
    }
  >
    Next page &gt;
  </span>
</div>
`;
